--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
-    <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.js"></script>
-    <script src="cytoscape-edgehandles.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.5.7/shim.min.js"></script>
-    <script src="https://unpkg.com/layout-base/layout-base.js"></script>
-    <script src="https://unpkg.com/cose-base/cose-base.js"></script>
-    <script src="cytoscape-cose-bilkent.js"></script>
 
-    <!-- panzoom-->
-    <link href="cytoscape.js-panzoom.css" rel="stylesheet" type="text/css" />
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-		<link href="font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css" />
-		<script src="cytoscape-panzoom.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+    <link href="cytoscape/css/cytoscape.js-panzoom.css" rel="stylesheet" type="text/css" />
+
+    <script src="cytoscape/js/dependencies.js"></script>
+    <script src="cytoscape/js/cytoscape.min.js"></script>
+    <script src="cytoscape/js/cytoscape-edgehandles.js"></script>
+		<script src="cytoscape/js/cytoscape-extensions.js"></script>
+    <script src="ngac.js"></script>
+
 
     <style>
       body {
@@ -58,12 +55,12 @@
           container: document.getElementById('cy'),
 
           ready: function(){
-            this.nodes().forEach(function(node){
+            /*this.nodes().forEach(function(node){
               let width = [30, 70, 110];
               let size = width[Math.floor(Math.random()*3)];
               node.css("width", size);
               node.css("height", size);
-            });
+            });*/
             this.layout({name: 'cose-bilkent', animationDuration: 1000}).run();
           },
 
@@ -183,11 +180,11 @@
         });
 
         document.querySelector('#delete-element').addEventListener('click', function() {
-          eh.deleteElement();
+          deleteElement();
         });
 
         document.querySelector('#add-node').addEventListener('click', function() {
-          eh.addNode();
+          addNode();
         });
 
         cy.panzoom({
