--- a/index.html
+++ b/index.html
@@ -7,45 +7,15 @@
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link href="cytoscape/css/cytoscape.js-panzoom.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
 
     <script src="cytoscape/js/dependencies.js"></script>
     <script src="cytoscape/js/cytoscape.min.js"></script>
 		<script src="cytoscape/js/cytoscape-extensions.js"></script>
     <script src="ngac.js"></script>
-
-
-    <style>
-      body {
-        font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
-        font-size: 14px;
-      }
-
-      #cy {
-        position: absolute;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        z-index: 999;
-      }
-
-      h1 {
-        opacity: 0.5;
-        font-size: 1em;
-        font-weight: bold;
-      }
-
-      #buttons {
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: 99999;
-        margin: 1em;
-      }
-    </style>
 
     <script>
       document.addEventListener('DOMContentLoaded', function(){
@@ -200,10 +170,10 @@
     <div id="cy"></div>
 
     <div id="buttons">
-      <button id="draw-on">Draw mode on</button>
-      <button id="draw-off">Draw mode off</button>
-      <button id="delete-element">Delete element</button>
-      <button id="add-node">Add node</button>
+      <button id="draw-on"><i class="fas fa-draw-polygon"></i></button>
+      <button id="draw-off"><i class="fas fa-expand-arrows-alt"></i></button>
+      <button id="add-node"><i class="fas fa-plus"></i></button>
+      <button id="delete-element"><i class="fas fa-trash-alt"></i></button>
     </div>
 
   </body>
