--- a/index.html
+++ b/index.html
@@ -169,9 +169,11 @@
 
     <div id="cy"></div>
 
-    <div id="buttons">
-      <button id="draw-on"><i class="fas fa-draw-polygon"></i></button>
-      <button id="draw-off"><i class="fas fa-expand-arrows-alt"></i></button>
+    <div id="buttons" class="cy-panzoom">
+      <div class="toggle">
+        <button id="draw-on"><i class="fas fa-draw-polygon"></i></button>
+        <button id="draw-off"><i class="fas fa-expand-arrows-alt"></i></button>
+      </div>
       <button id="add-node"><i class="fas fa-plus"></i></button>
       <button id="delete-element"><i class="fas fa-trash-alt"></i></button>
     </div>
