--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script src="cytoscape/js/dependencies.js"></script>
     <script src="cytoscape/js/cytoscape.min.js"></script>
 		<script src="cytoscape/js/cytoscape-extensions.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="ngac.js"></script>
 
 
@@ -44,6 +43,14 @@
                 'curve-style': 'bezier',
                 'target-arrow-shape': 'triangle',
                 'content': 'data(name)'
+              }
+            },
+
+            {
+              selector: '.object',
+              style: {
+                'shape': 'round-rectangle',
+                'width': '50px'
               }
             },
 
@@ -111,17 +118,17 @@
               { data: { id: 'lotr', name: 'Lord of the rings', parent: 'books' } },
 
               // Objects
-              { data: { id: 'hobbit', name: 'The Hobbit', parent: 'books' } },
-              { data: { id: 'fotr', name: 'Fellowship of the ring', parent: 'lotr' } },
-              { data: { id: 'ttt', name: 'The Two Towers', parent: 'lotr' } },
-              { data: { id: 'rotk', name: 'Return of the king', parent: 'lotr' } },
-              { data: { id: 'secret', name: 'Secret Document', parent: 'docs' } },
+              { data: { id: 'hobbit', name: 'The Hobbit', parent: 'books' }, classes: 'object' },
+              { data: { id: 'fotr', name: 'Fellowship of the ring', parent: 'lotr' }, classes: 'object' },
+              { data: { id: 'ttt', name: 'The Two Towers', parent: 'lotr' }, classes: 'object' },
+              { data: { id: 'rotk', name: 'Return of the king', parent: 'lotr' }, classes: 'object' },
+              { data: { id: 'secret', name: 'Secret Document', parent: 'docs' }, classes: 'object' },
 
               // Subjects
-              { data: { id: 'ille', name: 'Ilaman', parent: 'team' } },
-              { data: { id: 'jeppe', name: 'Jesper', parent: 'team' } },
-              { data: { id: 'emil', name: 'Emil', parent: 'team' } },
-              { data: { id: 'birger', name: 'Birger', parent: 'team' } }
+              { data: { id: 'ille', name: 'Ilaman', parent: 'team' }, classes: 'subject' },
+              { data: { id: 'jeppe', name: 'Jesper', parent: 'team' }, classes: 'subject' },
+              { data: { id: 'emil', name: 'Emil', parent: 'team' }, classes: 'subject' },
+              { data: { id: 'birger', name: 'Birger', parent: 'team' }, classes: 'subject' }
             ],
             edges: [
               { data: { name: 'write', source: 'jeppe', target: 'fotr' } },
