--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             name: 'cose-bilkent',
             animate: 'end',
             animationEasing: 'ease-out',
-            animationDuration: 4000, // added delay to prevent snapping
+            animationDuration: 2000,
             randomize: true
           });
 
