--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link href="cytoscape/css/cytoscape.js-panzoom.css" rel="stylesheet" type="text/css" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="cytoscape/js/dependencies.js"></script>
     <script src="cytoscape/js/cytoscape.min.js"></script>
 		<script src="cytoscape/js/cytoscape-extensions.js"></script>
-    <script src="ngac.js"></script>
+    <script src="js/ngac.js"></script>
 
 
     <script>
@@ -138,10 +139,10 @@
               { data: { id: 'secret', name: 'Secret Document', parent: 'docs' }, classes: 'object' },
 
               // Subjects
-              { data: { id: 'ille', name: 'Ilaman', parent: 'team' }, classes: 'subject' },
-              { data: { id: 'jeppe', name: 'Jesper', parent: 'team' }, classes: 'subject' },
-              { data: { id: 'emil', name: 'Emil', parent: 'team' }, classes: 'subject' },
-              { data: { id: 'birger', name: 'Birger', parent: 'team' }, classes: 'subject' }
+              { data: { id: 'ille', name: 'Ilaman', parent: 'team' }, classes: 'user' },
+              { data: { id: 'jeppe', name: 'Jesper', parent: 'team' }, classes: 'user' },
+              { data: { id: 'emil', name: 'Emil', parent: 'team' }, classes: 'user' },
+              { data: { id: 'birger', name: 'Birger', parent: 'team' }, classes: 'user' }
             ],
             edges: [
               { data: { name: 'write', source: 'jeppe', target: 'fotr' }, classes: 'edgelabel' },
@@ -212,6 +213,93 @@
 
       <button id="add-node"><i class="fas fa-plus"></i></button>
       <button id="delete-element"><i class="fas fa-trash-alt"></i></button>
+
+    </div>
+
+    <div class="add-menu" style="display: none;">
+
+
+      <!-- Add user menu-->
+
+      <div id="add-user" class="add-user" style="display: none;">
+
+        <h2>New element</h2>
+
+        <form class="" action="index.html" method="post">
+
+          <div class="mb-3">
+            <label for="namefield" class="form-label">Name</label>
+            <input type="text" class="form-control" id="namefield" aria-describedby="emailHelp" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="attributefield" class="form-label">Attribute</label>
+            <select class="form-select" id="attributefield" aria-label="Default select example">
+              <option selected>None</option>
+              <option value="1">List parents here</option>
+            </select>
+          </div>
+
+          <div class="mb-3">
+            <label for="typefield" class="form-label">Type</label>
+            <select class="form-select" id="typefield"aria-label="Default select example">
+              <option selected>User</option>
+              <option value="1">Object</option>
+              <option value="2">User attribute</option>
+              <option value="3">Object attribute</option>
+              <option value="4">Policy class</option>
+            </select>
+          </div>
+
+          <div class="add-button">
+            <input type="button" class="btn btn-primary" value="Add element">
+          </div>
+
+          <div class="ngac-bottom-tag">
+            <h1>NGAC policy tool</h1>
+          </div>
+
+        </form>
+
+      </div>
+      <!-- Add user menu -->
+
+      <!-- Add relation -->
+      <div id="add-relation" class="add-relation" style="display: none;">
+
+        <h2>New relation</h2>
+
+        <fieldset disabled>
+          <div class="mb-3">
+            <label for="sourcefield" class="form-label">Source</label>
+            <input type="text" id="disabledTextInput" class="form-control" placeholder="Insert source here">
+          </div>
+
+          <div class="mb-3">
+            <label for="targetfield" class="form-label">Source</label>
+            <input type="text" id="targetfield" class="form-control" placeholder="Insert target here">
+          </div>
+        </fieldset>
+
+        <div class="mb-3">
+          <label for="relationfield" class="form-label">Attribute</label>
+          <select class="form-select" id="relationfield" aria-label="Default select example">
+            <option selected>Read</option>
+            <option value="1">Write</option>
+          </select>
+        </div>
+
+        <div class="add-button">
+          <input type="button" class="btn btn-primary" value="Add relation">
+        </div>
+
+        <div class="ngac-bottom-tag">
+          <h1>NGAC policy tool</h1>
+        </div>
+
+      </div>
+
+      <!-- Add relation -->
 
     </div>
 
