Fixed attribute select field duplication

--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
 					// options here...
 				});
 
+        ngacJS.loadAttributes();
+
       });
+
+
 
       // Function added due to constraint call from extension file
       function edgePrompt(bool, source, target){
