--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
+
     <script src="cytoscape/js/dependencies.js"></script>
     <script src="cytoscape/js/cytoscape.min.js"></script>
 		<script src="cytoscape/js/cytoscape-extensions.js"></script>
@@ -125,11 +130,11 @@
             nodes: [
 
               // Categories
-              { data: { id: 'Books', name: 'Books' } },
+              { data: { id: 'Books', name: 'Books' }, classes: 'Attribute' },
 
-              { data: { id: 'Documents', name: 'Documents' } },
-              { data: { id: 'Team', name: 'Team' } },
-              { data: { id: 'Lord of the rings', name: 'Lord of the rings', parent: 'Books' } },
+              { data: { id: 'Documents', name: 'Documents' }, classes: 'Attribute'  },
+              { data: { id: 'Team', name: 'Team' }, classes: 'Attribute'  },
+              { data: { id: 'Lord of the rings', name: 'Lord of the rings', parent: 'Books' }, classes: 'Attribute'  },
 
               // Objects
               { data: { id: 'The Hobbit', name: 'The Hobbit', parent: 'Books' }, classes: 'Object' },
