--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
-
     <script src="cytoscape/js/dependencies.js"></script>
     <script src="cytoscape/js/cytoscape.min.js"></script>
 		<script src="cytoscape/js/cytoscape-extensions.js"></script>
@@ -56,10 +51,28 @@
             },
 
             {
+              selector: '.attribute',
+              style: {
+                'shape': 'diamond'
+              }
+            },
+
+            {
               selector: '.Object',
               style: {
                 'shape': 'rectangle',
                 'width': '50px'
+              }
+            },
+
+            {
+              selector: '.attribute:childless',
+              style: {
+                'shape': 'rectangle',
+                'background-color' : '#DCDCDC',
+                'border-color' : '#D3D3D3',
+                'border-width' : '1px',
+                'border-style' : 'solid'
               }
             },
 
@@ -130,11 +143,11 @@
             nodes: [
 
               // Categories
-              { data: { id: 'Books', name: 'Books' }, classes: 'Attribute' },
+              { data: { id: 'Books', name: 'Books' }, classes: 'Object attribute' },
 
-              { data: { id: 'Documents', name: 'Documents' }, classes: 'Attribute'  },
-              { data: { id: 'Team', name: 'Team' }, classes: 'Attribute'  },
-              { data: { id: 'Lord of the rings', name: 'Lord of the rings', parent: 'Books' }, classes: 'Attribute'  },
+              { data: { id: 'Documents', name: 'Documents' }, classes: 'Object attribute'  },
+              { data: { id: 'Team', name: 'Team' }, classes: 'Object attribute'  },
+              { data: { id: 'Lord of the rings', name: 'Lord of the rings', parent: 'Books' }, classes: 'Object attribute'  },
 
               // Objects
               { data: { id: 'The Hobbit', name: 'The Hobbit', parent: 'Books' }, classes: 'Object' },
@@ -192,11 +205,9 @@
 					// options here...
 				});
 
-        ngacJS.loadAttributes();
+        ngacJS.updateAttributes();
 
       });
-
-
 
       // Function added due to constraint call from extension file
       function edgePrompt(bool, source, target){
@@ -287,7 +298,7 @@
         </fieldset>
 
         <div class="mb-3">
-          <label for="relationfield" class="form-label">Attribute</label>
+          <label for="relationfield" class="form-label">Access privilege</label>
           <select class="form-select" id="relationfield" aria-label="Default select example">
             <option selected>Read</option>
             <option>Write</option>
